--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "myblogapp",
   "version": "0.1.0",
+  "description": "",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,8 +14,15 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "axios": "^0.19.0",
+    "js-cookie": "^2.2.1",
     "next": "9.1.6",
     "react": "16.12.0",
     "react-dom": "16.12.0"
+  },
+  "devDependencies": {
+    "css-loader": "^3.4.0",
+    "style-loader": "^1.1.1"
   }
 }
